--- a/.github/workflows/OWRT-ALL.yml
+++ b/.github/workflows/OWRT-ALL.yml
@@ -38,6 +38,8 @@ jobs:
     #调用公用编译核心WRT-CORE.yml
     uses: ./.github/workflows/WRT-CORE.yml
     with:
+      #github_token
+      GITHUB_TOKEN: ${{secrets.REPO_TOKEN}}
       #编译平台
       WRT_TARGET: ${{matrix.TARGET}}
       #默认主题
