--- a/.github/workflows/OWRT-ALL.yml
+++ b/.github/workflows/OWRT-ALL.yml
@@ -19,7 +19,9 @@ on:
         description: '仅输出配置文件，不编译固件。'
         default: 'false'
         required: false
-        type: boolean
+        type: boolean 
+env:
+   GITHUBH_TOKEN: ${{ secrets.REPO_TOKEN }}
 
 #CI权限
 permissions: write-all
