--- a/.github/workflows/OWRT-ALL.yml
+++ b/.github/workflows/OWRT-ALL.yml
@@ -21,7 +21,7 @@ on:
         required: false
         type: boolean 
 env:
-   GITHUBH_TOKEN: ${{ secrets.REPO_TOKEN }}
+   GITHUBH_TOKEN: ${{ github.REPO_TOKEN }}
 
 #CI权限
 permissions: write-all
