--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -4,6 +4,9 @@ name: WRT-CORE
 on:
   workflow_call:
     inputs:
+      GITHUB_TOKEN:
+        required: true
+        type: string
       WRT_TARGET:
         required: true
         type: string
